crates/puffin-cli/tests/snapshots/pip_uninstall__missing_pyproject_toml.snap
---
source: crates/puffin-cli/tests/pip_uninstall.rs
info:
  program: puffin
  args:
    - pip-uninstall
    - "-r"
    - pyproject.toml
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: failed to open file `pyproject.toml`
  Caused by: No such file or directory (os error 2)

