crates/puffin-cli/tests/snapshots/pip_uninstall__missing_requirements_txt.snap
---
source: crates/puffin-cli/tests/pip_uninstall.rs
info:
  program: puffin
  args:
    - pip-uninstall
    - "-r"
    - requirements.txt
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: failed to open file `requirements.txt`
  Caused by: No such file or directory (os error 2)

