crates/puffin-cli/tests/snapshots/pip_uninstall__no_arguments.snap
---
source: crates/puffin-cli/tests/pip_uninstall.rs
info:
  program: puffin
  args:
    - pip-uninstall
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <PACKAGE|--requirement <REQUIREMENT>>

Usage: puffin pip-uninstall <PACKAGE|--requirement <REQUIREMENT>>

For more information, try '--help'.

