crates/puffin-cli/tests/snapshots/pip_uninstall__uninstall.snap
---
source: crates/puffin-cli/tests/pip_uninstall.rs
info:
  program: puffin
  args:
    - pip-uninstall
    - MarkupSafe
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmp2hOiz7
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmp9AcnyS/.venv
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Uninstalled 1 package in [TIME]
 - markupsafe==2.1.3

